--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,25 +1,20 @@
-name: Mark stale issues and PRs
+name: Stale (soft)
 on:
-  schedule:
-    - cron: '17 6 * * *' # daily 06:17 UTC
-permissions:
-  issues: write
-  pull-requests: write
+  schedule: [ { cron: "0 9 * * 1-5" } ]
+permissions: { issues: write, pull-requests: write }
 jobs:
   stale:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/stale@v9
         with:
-          days-before-stale: 30
-          days-before-close: 7
-          stale-issue-label: 'stale'
-          stale-pr-label: 'stale'
-          exempt-issue-labels: 'pinned,security'
-          exempt-pr-labels: 'work-in-progress'
-          stale-issue-message: >
-            This issue has been automatically marked as stale due to inactivity.
-            It will be closed if no further activity occurs.
-          stale-pr-message: >
-            This PR has been automatically marked as stale due to inactivity.
-            It will be closed if no further activity occurs.
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          days-before-issue-stale: 45
+          days-before-pr-stale: 30
+          days-before-close: -1
+          exempt-issue-labels: pinned,security
+          exempt-pr-labels: work-in-progress,do-not-close
+          stale-issue-label: stale
+          stale-pr-label: stale
+          stale-issue-message: "This issue is getting a little dusty — comment to keep it fresh ✨"
+          stale-pr-message: "This PR is stale — push commits or comment to keep it active."
