--- a/.github/workflows/deploy-blackroad-channel.yml
+++ b/.github/workflows/deploy-blackroad-channel.yml
@@ -14,6 +14,17 @@ on:
         description: "Git ref/sha to deploy (for rollback). Leave empty to use default branch."
         required: false
         default: ""
+        description: 'Channel: canary | beta | prod'
+        required: true
+        default: 'canary'
+      provider:
+        description: 'Optional provider: pages | vercel | cloudflare | netlify | all'
+        required: false
+        default: 'all'
+      ref:
+        description: 'Git ref/sha to deploy (for rollback). Leave empty to use default branch.'
+        required: false
+        default: ''
 permissions:
   contents: write
   pages: write
@@ -27,6 +38,8 @@ jobs:
           ref: ${{ github.event.inputs.ref || github.ref }}
       - uses: actions/setup-node@v4
         with: { node-version: 20 }
+        with:
+          node-version: 20
       - name: Install & Build
         run: |
           cd sites/blackroad
@@ -39,6 +52,8 @@ jobs:
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with: { path: sites/blackroad/dist }
+        with:
+          path: sites/blackroad/dist
       - name: Upload dist snapshot (artifact)
         uses: actions/upload-artifact@v4
         with:
@@ -60,6 +75,11 @@ jobs:
         with: { ref: ${{ github.event.inputs.ref || github.ref }} }
       - uses: actions/setup-node@v4
         with: { node-version: 20 }
+        with:
+          ref: ${{ github.event.inputs.ref || github.ref }}
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
       - name: Deploy to Vercel (channel alias)
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
@@ -80,6 +100,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with: { ref: ${{ github.event.inputs.ref || github.ref }} }
+        with:
+          ref: ${{ github.event.inputs.ref || github.ref }}
       - name: Deploy to Cloudflare Pages
         id: cf
         uses: cloudflare/pages-action@v1
@@ -98,6 +120,11 @@ jobs:
         with: { ref: ${{ github.event.inputs.ref || github.ref }} }
       - uses: actions/setup-node@v4
         with: { node-version: 20 }
+        with:
+          ref: ${{ github.event.inputs.ref || github.ref }}
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
       - name: Deploy to Netlify (channel)
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
@@ -112,6 +139,8 @@ jobs:
       - name: Commit deploy history
         if: always()
         env: { GITHUB_TOKEN: ${{ secrets.BOT_TOKEN || secrets.GITHUB_TOKEN }} }
+        env:
+          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN || secrets.GITHUB_TOKEN }}
         run: |
           git add sites/blackroad/public/deploys.json || true
           git diff --staged --quiet || (git config user.name  "${{ secrets.BOT_USER || 'blackroad-bot' }}"; git config user.email "${{ secrets.BOT_USER || 'blackroad-bot' }}@users.noreply.github.com"; git commit -m "chore(deploy): record ${{ inputs.channel }} @ ${{ github.sha }}"; git push || true)
