--- a/sites/blackroad/package.json
+++ b/sites/blackroad/package.json
@@ -1,25 +1,26 @@
 {
   "name": "blackroad-site",
   "private": true,
-  "version": "0.3.0",
-  "type": "module",
+  "version": "0.3.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js,.jsx",
-    "format": "prettier -w ."
+    "format": "prettier -w .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx || true",
+    "test": "echo \"(add Playwright later)\""
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^9.9.0",
-    "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.10",
-    "vite": "^5.4.2"
+    "vite": "^5.4.0"
   }
 }
