--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,15 @@
 version: 2
 updates:
-  - package-ecosystem: 'github-actions'
-    directory: '/'
-    schedule: { interval: 'weekly' }
+  - package-ecosystem: npm
+    directory: "/"
+    schedule: { interval: daily }
+    open-pull-requests-limit: 10
+
+  - package-ecosystem: npm
+    directory: "/sites/blackroad"
+    schedule: { interval: daily }
+    open-pull-requests-limit: 10
+
+  - package-ecosystem: pip
+    directory: "/"
+    schedule: { interval: weekly }
