--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,13 +1,81 @@
 frontend:
-  - 'apps/**'
-workflows:
-  - '.github/workflows/**'
+  - changed-files:
+      - any-glob-to-any-file:
+          - 'sites/blackroad/**'
+          - 'apps/quantum/**'
+          - '**/*.tsx'
+          - '**/*.ts'
+          - '**/*.jsx'
+          - '**/*.js'
+          - '**/*.css'
+          - '**/*.html'
+
+backend:
+  - changed-files:
+      - any-glob-to-any-file:
+          - 'api/**'
+          - 'services/**'
+          - '**/*.py'
+          - '**/*.go'
+          - 'main.py'
+
 docs:
-  - '**/*.md'
-infra:
-  - 'Dockerfile'
-  - '.dockerignore'
-python:
-  - '**/*.py'
-javascript:
-  - '**/*.js'
+  - changed-files:
+      - any-glob-to-any-file:
+          - 'docs/**'
+          - 'README.md'
+          - 'CHANGELOG.md'
+          - '**/*.md'
+
+tests:
+  - changed-files:
+      - any-glob-to-any-file:
+          - 'tests/**'
+          - '**/*.test.*'
+          - '**/*.spec.*'
+
+prompts:
+  - changed-files:
+      - any-glob-to-any-file:
+          - 'prompts/**'
+          - 'prompts/llm/**'
+          - 'codex/**'
+
+templates:
+  - changed-files:
+      - any-glob-to-any-file:
+          - 'templates/**'
+
+devops:
+  - changed-files:
+      - any-glob-to-any-file:
+          - '.github/**'
+          - '.devcontainer/**'
+          - '.husky/**'
+          - 'config/**'
+          - 'scripts/**'
+          - 'tools/**'
+          - 'bin/**'
+          - 'Makefile'
+          - '.nvmrc'
+          - '.tool-versions'
+          - '.yamllint.yaml'
+          - '.markdownlint.yaml'
+          - '.htmlhintrc'
+          - '.prettierrc.*'
+          - '.prettierignore'
+          - '.editorconfig'
+          - '.gitattributes'
+          - '.gitignore'
+
+security:
+  - changed-files:
+      - any-glob-to-any-file:
+          - 'secrets/**'
+          - '.mergify.yml'
+
+site-assets:
+  - changed-files:
+      - any-glob-to-any-file:
+          - 'sites/blackroad/public/**'
+          - 'sites/blackroad/assets/**'
