--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -1,27 +1,35 @@
-- name: priority: high
-  color: d73a4a
-  description: Must-do soon
-- name: priority: medium
-  color: fbca04
-  description: Should-do
-- name: priority: low
-  color: c2e0c6
-  description: Nice-to-have
-- name: deps
-  color: 0366d6
-  description: Dependencies
+- name: frontend
+  color: "1d76db"
+  description: "UI, React, TS/JS, styles"
+
+- name: backend
+  color: "0e8a16"
+  description: "API, services, Python/Go"
+
+- name: docs
+  color: "5319e7"
+  description: "Documentation and guides"
+
+- name: tests
+  color: "b60205"
+  description: "Test code and fixtures"
+
+- name: prompts
+  color: "fbca04"
+  description: "LLM prompts & Codex"
+
+- name: templates
+  color: "c2e0c6"
+  description: "Scaffolds & templates"
+
+- name: devops
+  color: "0052cc"
+  description: "CI/CD, config, tooling"
+
 - name: security
-  color: 8b949e
-  description: Security-related
-- name: bug
-  color: d73a4a
-  description: Something is broken
-- name: feature
-  color: a2eeef
-  description: New capability
-- name: automerge
-  color: 0e8a16
-  description: OK to auto-merge when checks pass
-- name: needs-review
-  color: 5319e7
-  description: Awaiting maintainer review
+  color: "d93f0b"
+  description: "Security, policies, secrets"
+
+- name: site-assets
+  color: "5319e7"
+  description: "Static site assets"
