--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,23 +1,31 @@
 name: CodeQL
 on:
   push: { branches: [ main ] }
-  pull_request: { branches: [ main ] }
+  pull_request:
+  schedule:
+    - cron: '0 2 * * 1'  # Mondays 02:00 UTC
+
 permissions:
-  security-events: write
   contents: read
+  security-events: write
+
 jobs:
   analyze:
     runs-on: ubuntu-latest
     strategy:
-      matrix: { language: [ 'javascript' ] }
+      matrix:
+        language: [ 'javascript', 'python' ]
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: github/codeql-action/init@v3
+      - name: Checkout
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@df559355d593797519d70b90fc8edd5db049e7a2
         with:
           languages: ${{ matrix.language }}
-          build-mode: none
-          config-file: ./.github/codeql/config.yml
-          queries: security-and-quality
-      - uses: github/codeql-action/analyze@v3
-        with: { category: "/language:${{ matrix.language }}" }
+          # build-mode: autobuild | manual | none (default autodetect)
+          # build-mode: autobuild
 
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@df559355d593797519d70b90fc8edd5db049e7a2
