--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -1,19 +1,21 @@
 name: Sync Labels
 on:
-  push:
-    branches: [main]
-    paths: ['.github/labels.yml', '.github/workflows/sync-labels.yml']
   workflow_dispatch:
+  push:
+    paths: [ ".github/labels.yml" ]
+
 permissions:
   contents: read
   issues: write
+
 jobs:
-  labels:
+  sync:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: crazy-max/ghaction-github-labeler@v5
+      - name: Checkout
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+      - name: Apply labels from code
+        uses: crazy-max/ghaction-github-labeler@24d110aa46a59976b8a7f35518cb7f14f434c916
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          config-file: .github/labels.yml
-          skip-delete: false
+          yaml-file: .github/labels.yml
