Add Lucidia LLM scaffolding and training utilities

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ CODEX_SSH_KEY=
 
 # Set to 1 to allow accept-new for unknown SSH host keys (dev convenience)
 CODEX_SSH_ACCEPT_NEW=0
+
+# Lucidia serving/training
+OPENAI_BASE_URL=http://localhost:8000/v1
+OPENAI_MODEL=lucidia-neox-1.4b
+RAG_INDEX_PATH=rag/index/lucidia.faiss
+TRAIN_BASE_MODEL=EleutherAI/pythia-1.4b
