feat: add lucidia api nginx snippet

--- a/config/nginx/llm.conf
+++ b/config/nginx/llm.conf
@@ -19,4 +19,6 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
+
+    include snippets/lucidia_api.conf;
 }
