--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
     "husky": "^9.1.5",
-    "lint-staged": "^15.2.8"
+    "lint-staged": "^15.2.8",
+    "globals": "^14.0.0"
   },
   "scripts": {
     "prepare": "husky install",
@@ -14,7 +15,12 @@
     "lint": "eslint --ext .js,.mjs,.cjs . || true"
   },
   "lint-staged": {
-    "apps/**/*.html": ["prettier -w"],
-    "*.js": ["eslint --fix", "prettier -w"]
+    "apps/**/*.html": [
+      "prettier -w"
+    ],
+    "*.js": [
+      "eslint --fix",
+      "prettier -w"
+    ]
   }
 }
