--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.8",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "puppeteer": "^22.10.0"
   },
   "scripts": {
     "prepare": "husky",
