--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "node tests/smoke.test.js",
     "dev": "npm --prefix sites/blackroad run dev",
     "build": "npm --prefix sites/blackroad run build",
+    "postinstall": "npm --prefix sites/blackroad install",
     "fix-anything": "node .github/tools/codex-apply.js .github/prompts/codex-fix-anything.md || true"
   },
   "lint-staged": {
