--- a/sites/blackroad/package.json
+++ b/sites/blackroad/package.json
@@ -13,14 +13,14 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.7.2"
+    "recharts": "^2.7.2",
+    "vite": "^5.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.10",
-    "vite": "^5.4.2"
+    "tailwindcss": "^3.4.10"
   }
 }
