--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.8",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "gray-matter": "^4.0.3",
+    "marked": "^14.1.1"
   },
   "scripts": {
     "prepare": "husky",
